# MCCC

./: README.md  logismCPU.circ  package.scm
exampleProgram/: basicMath.h.sym  basicMath.sym  factorial.sym  fibonacci.sym
explanations/: assembly.asm  rom.md  symbolic.sym
src/: Asm.cpp  Asm.h  AsmAST.cpp  AsmAST.h  AutomatedTests.cpp  AutomatedTests.h  Definitions.h  Helpers.h  MCCC.cbp  Processor.cpp  Processor.h  Simulator.cpp  Simulator.h  Sym.cpp  Sym.h  SymAST.cpp  SymAST.h  main.cpp  meson.build
